// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IndividualExtensionDateModalComponent > should snap with a preset selected 1`] = `
<tm-individual-extension-date-modal
  DEADLINE_OPTIONS={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  confirmCallbackEvent={[Function EventEmitter_]}
  customTimestamp={[Function Function]}
  dateFormatService={[Function _DateFormatService]}
  feedbackSessionEndingTimestamp="0"
  feedbackSessionTimeZone=""
  numInstructors={[Function Number]}
  numStudents={[Function Number]}
  selectedPreset={[Function Function]}
  simpleModalService={[Function _SimpleModalService]}
>
  <div
    class="modal-header alert alert-primary alert-no-bottom"
  >
    <h5
      class="modal-title"
    >
      Select the new deadline for extension
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
  >
     Extending the feedback session for 
    <b>
      10
    </b>
     student(s) and 
    <b>
      20
    </b>
     instructor(s):
  </div><div
    class="px-4"
  >
    <div
      class="d-flex flex-column"
    >
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="12 hours"
        />
         12 hours 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 day"
        />
         1 day 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="3 days"
        />
         3 days 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 week"
        />
         1 week 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="Custom"
        />
         Custom 
      </label>
    </div>
    <br />
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-success modal-btn-ok"
      type="button"
    >
       Save Changes 
    </button>
  </div>
</tm-individual-extension-date-modal>
`;

exports[`IndividualExtensionDateModalComponent > should snap with custom selected 1`] = `
<tm-individual-extension-date-modal
  DEADLINE_OPTIONS={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  confirmCallbackEvent={[Function EventEmitter_]}
  customTimestamp={[Function Function]}
  dateFormatService={[Function _DateFormatService]}
  feedbackSessionEndingTimestamp="0"
  feedbackSessionTimeZone={[Function String]}
  numInstructors={[Function Number]}
  numStudents={[Function Number]}
  selectedPreset={[Function Function]}
  simpleModalService={[Function _SimpleModalService]}
>
  <div
    class="modal-header alert alert-primary alert-no-bottom"
  >
    <h5
      class="modal-title"
    >
      Select the new deadline for extension
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
  >
     Extending the feedback session for 
    <b>
      10
    </b>
     student(s) and 
    <b>
      20
    </b>
     instructor(s):
  </div><div
    class="px-4"
  >
    <div
      class="d-flex flex-column"
    >
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="12 hours"
        />
         12 hours 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 day"
        />
         1 day 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="3 days"
        />
         3 days 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 week"
        />
         1 week 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="Custom"
        />
         Custom 
      </label>
    </div>
    <div
      class="mt-2"
    >
      <small>
        The new deadline of the feedback session will be:
      </small>
      <div
        id="submission-start-date"
      >
        <tm-datetimepicker
          id="submission-end-datetime"
        >
          <div
            class="d-flex gap-2 align-items-start"
          >
            <div
              class="input-group flex-grow-1"
            >
              <input
                aria-label="Date"
                class="form-control ng-untouched ng-pristine ng-valid"
                ngbdatepicker=""
                readonly=""
                type="text"
              />
              <button
                aria-label="Change date"
                class="btn btn-light input-group-text"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <select
              aria-label="Select time"
              class="form-control form-select w-auto ng-untouched ng-pristine ng-valid"
            >
              <option
                value="1: Object"
              >
                 01:00H 
              </option>
              <option
                value="2: Object"
              >
                 02:00H 
              </option>
              <option
                value="3: Object"
              >
                 03:00H 
              </option>
              <option
                value="4: Object"
              >
                 04:00H 
              </option>
              <option
                value="5: Object"
              >
                 05:00H 
              </option>
              <option
                value="6: Object"
              >
                 06:00H 
              </option>
              <option
                value="7: Object"
              >
                 07:00H 
              </option>
              <option
                value="8: Object"
              >
                 08:00H 
              </option>
              <option
                value="9: Object"
              >
                 09:00H 
              </option>
              <option
                value="10: Object"
              >
                 10:00H 
              </option>
              <option
                value="11: Object"
              >
                 11:00H 
              </option>
              <option
                value="12: Object"
              >
                 12:00H 
              </option>
              <option
                value="13: Object"
              >
                 13:00H 
              </option>
              <option
                value="14: Object"
              >
                 14:00H 
              </option>
              <option
                value="15: Object"
              >
                 15:00H 
              </option>
              <option
                value="16: Object"
              >
                 16:00H 
              </option>
              <option
                value="17: Object"
              >
                 17:00H 
              </option>
              <option
                value="18: Object"
              >
                 18:00H 
              </option>
              <option
                value="19: Object"
              >
                 19:00H 
              </option>
              <option
                value="20: Object"
              >
                 20:00H 
              </option>
              <option
                value="21: Object"
              >
                 21:00H 
              </option>
              <option
                value="22: Object"
              >
                 22:00H 
              </option>
              <option
                value="23: Object"
              >
                 23:00H 
              </option>
              <option
                value="0: Object"
              >
                23:59H
              </option>
              <option
                value="24: Object"
              >
                10:30H
              </option>
            </select>
          </div>
        </tm-datetimepicker>
      </div>
    </div>
    <br />
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-success modal-btn-ok"
      type="button"
    >
       Save Changes 
    </button>
  </div>
</tm-individual-extension-date-modal>
`;

exports[`IndividualExtensionDateModalComponent > should snap with the extended students 1`] = `
<tm-individual-extension-date-modal
  DEADLINE_OPTIONS={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  confirmCallbackEvent={[Function EventEmitter_]}
  customTimestamp={[Function Function]}
  dateFormatService={[Function _DateFormatService]}
  feedbackSessionEndingTimestamp="0"
  feedbackSessionTimeZone=""
  numInstructors={[Function Number]}
  numStudents={[Function Number]}
  selectedPreset={[Function Function]}
  simpleModalService={[Function _SimpleModalService]}
>
  <div
    class="modal-header alert alert-primary alert-no-bottom"
  >
    <h5
      class="modal-title"
    >
      Select the new deadline for extension
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
  >
     Extending the feedback session for 
    <b>
      10
    </b>
     student(s) and 
    <b>
      20
    </b>
     instructor(s):
  </div><div
    class="px-4"
  >
    <div
      class="d-flex flex-column"
    >
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="12 hours"
        />
         12 hours 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 day"
        />
         1 day 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="3 days"
        />
         3 days 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 week"
        />
         1 week 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="Custom"
        />
         Custom 
      </label>
    </div>
    <br />
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-success modal-btn-ok"
      disabled=""
      type="button"
    >
       Save Changes 
    </button>
  </div>
</tm-individual-extension-date-modal>
`;

exports[`IndividualExtensionDateModalComponent > should snap with the warning modal 1`] = `
<tm-individual-extension-date-modal
  DEADLINE_OPTIONS={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  confirmCallbackEvent={[Function EventEmitter_]}
  customTimestamp={[Function Function]}
  dateFormatService={[Function _DateFormatService]}
  feedbackSessionEndingTimestamp="0"
  feedbackSessionTimeZone=""
  numInstructors={[Function Number]}
  numStudents={[Function Number]}
  selectedPreset={[Function Function]}
  simpleModalService={[Function _SimpleModalService]}
>
  <div
    class="modal-header alert alert-primary alert-no-bottom"
  >
    <h5
      class="modal-title"
    >
      Select the new deadline for extension
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
  >
     Extending the feedback session for 
    <b>
      10
    </b>
     student(s) and 
    <b>
      20
    </b>
     instructor(s):
  </div><div
    class="px-4"
  >
    <div
      class="d-flex flex-column"
    >
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="12 hours"
        />
         12 hours 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 day"
        />
         1 day 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="3 days"
        />
         3 days 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="1 week"
        />
         1 week 
         (Sat, 5 Apr 2000 2:00 +08) 
      </label>
      <label
        class="me-3"
      >
        <input
          name="deadlineOption"
          type="radio"
          value="Custom"
        />
         Custom 
      </label>
    </div>
    <br />
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-success modal-btn-ok"
      disabled=""
      type="button"
    >
       Save Changes 
    </button>
  </div>
</tm-individual-extension-date-modal>
`;
